tests/baselines/reference/privateNamesAndMethods.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(2,5): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(3,11): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(4,12): error TS18022: A method cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(8,9): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(11,9): error TS18023: An accessor cannot be named with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(24,5): error TS18022: A method cannot be named with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts (6 errors) ====
    class A {
        #foo(a: number) {}
        ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        async #bar(a: number) {}
              ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        async *#baz(a: number) {
               ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
            return 3;
        }
        #_quux: number;
        get #quux (): number {
            ~~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
            return this.#_quux;
        }
        set #quux (val: number) {
            ~~~~~
!!! error TS18023: An accessor cannot be named with a private identifier.
            this.#_quux = val; 
        }
        constructor () {
            this.#foo(30);
            this.#bar(30);
            this.#baz(30);
            this.#quux = this.#quux + 1;
            this.#quux++;
     }
    }
    
    class B extends A {
        #foo(a: string) {}
        ~~~~
!!! error TS18022: A method cannot be named with a private identifier.
        constructor () {
            super();
            this.#foo("str");
        }
    }
    